--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -18,26 +18,15 @@
     max-width: 300px;
   }
   
-    
-  .activity-column {
-    flex: 3;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-  }
   
   .search-bar-wrapper {
-    margin-bottom: 12px;
+    margin-bottom: 32px;
   }
   
-  .activity-list-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 1rem;
-   
+  .activity-header-wrapper {
+    margin-bottom: 16px;
   }
-  
+
   .sort-select-button {
     display: inline-flex;
     align-items: center;
@@ -68,4 +57,13 @@
     background-color: #333333;
     clip-path: polygon(0 0, 100% 0, 50% 100%);
   }
+
+  .activity-list-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  
+  
   
